# cifar10-mlops-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.py  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yml
cifar10/: constants.py  infer.py  model.py  test.py  train.py  trainer.py
conf/data_loading/: data_loading.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
data/: test.dvc  train.dvc
docs/: conf.py  index.rst  modules.rst
